--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         .scrolling-message span {
             display: inline-block;
             padding-left: 100%; /* 初始位置在屏幕右侧 */
-            animation: scrollText 10s linear infinite; /* 加快滚动速度 */
+            animation: scrollText 15s linear infinite; /* 减慢滚动速度 */
         }
 
         @keyframes scrollText {
@@ -195,7 +195,7 @@
 
     <!-- 在页面底部添加滚动字幕 -->
     <div class="scrolling-message">
-        <span>LINUX DO年度寄语：愿新的一年，我们继续在技术海洋中携手成长。我为人人、人人为我，真诚、友善地对待他人，不以一己私利为重，这就是LINUX DO的家庭原则！</span>
+        <span>LINUX DO年度寄语：愿新的一年，我们继续在技术海洋中携手成长</span>
     </div>
 
     <script>
