--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
     </div>
 
     <!-- 在页面左右两侧中间添加以下代码 -->
-    <div style="position: fixed; top: 50%; left: 150px; transform: translateY(-50%); font-size: 100px; color: yellow; font-weight: bold;">
+    <div style="position: fixed; top: 50%; left: 150px; transform: translateY(-50%); font-size: 100px; color: #D9D919; font-weight: bold;">
         真诚、友善
     </div>
-    <div style="position: fixed; top: 50%; right: 150px; transform: translateY(-50%); font-size: 100px; color: yellow; font-weight: bold;">
+    <div style="position: fixed; top: 50%; right: 150px; transform: translateY(-50%); font-size: 100px; color: #D9D919; font-weight: bold;">
         团结、专业
     </div>
 
