--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     
     <!-- 在页面底部添加滚动字幕 -->
     <div class="scrolling-message">
-        <span>LINUX DO年度寄语：愿新的一年，我们继续在技术海洋中携手成长！我为人人，人人为我，真诚、友善地对待他人，不以一己私利为重，这技术LINUX DO！</span>
+        <span>LINUX DO年度寄语：愿新的一年，我们继续在技术海洋中携手成长！我为人人，人人为我，真诚、友善地对待他人，不以一己私利为重，这就是LINUX DO！</span>
     </div>
 
     <script>
