--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('https://ooo.0x0.ooo/2024/12/29/OEZi5l.png') no-repeat center center/cover;
+            background: url('https://raw.githubusercontent.com/weakchen007/newyear.github.io/591d0e4395663aec2bd22ce2056ebc8c3c0a84a1/pic/dtime241219.png') no-repeat center center/cover;
             z-index: -3;
             opacity: 1.2;
         }
