--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('https://s2.loli.net/2024/12/29/eMjyY6b1lQgdPGN.png') no-repeat center center/cover;
+            background: url('https://github.com/weakchen007/newyear.github.io/blob/main/pic/ny.jpg') no-repeat center center/cover;
             z-index: -3;
             opacity: 1.2;
         }
@@ -363,3 +363,4 @@
     </script>
 </body>
 </html>
+
