--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('https://github.com/weakchen007/newyear.github.io/blob/main/pic/ny.jpg') no-repeat center center/cover;
+            background: url('https://i.postimg.cc/5thzx8qN/ny.jpg') no-repeat center center/cover;
             z-index: -3;
             opacity: 1.2;
         }
@@ -363,4 +363,5 @@
     </script>
 </body>
 </html>
+
 
