--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- OpenGraph 标签 -->
     <meta property="og:title" content="中国春节倒计时" />
     <meta property="og:description" content="查看中国春节的倒计时，了解春节日期和剩余时间。" />
-    <meta property="og:image" content="https://s2.loli.net/2024/12/29/eMjyY6b1lQgdPGN.png" />
+    <meta property="og:image" content="https://i.postimg.cc/5thzx8qN/ny.jpg" />
     <meta property="og:url" content="https://ny.aiwv.tech" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="中国春节倒计时" />
@@ -363,5 +363,6 @@
     </script>
 </body>
 </html>
+
 
 
